--- a/12_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -67,7 +67,7 @@
                                 @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                 {
                                     <li>
-                                        <a href="commonInfo.FaceBookLink" target="_blank">Fanpage</a>
+                                        <a href="@commonInfo.FaceBookLink" target="_blank">Fanpage</a>
                                     </li>
                                 }
 
