--- a/12_Shop_MultiProduct/Views/Shared/_partial/_FooterPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_FooterPartial.cshtml
@@ -1,101 +1,63 @@
-﻿<footer>
+﻿@{
+    AnperoFrontend.WebService.Webconfig commonInfo = new AnperoFrontend.WebService.Webconfig();
+    if (ViewData["commonInfo"] != null)
+    {
+        commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
+    }
+}
+<footer>
     <div class="box-top-footer">
         <div class="container">
             <div class="main-footer">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 col-xs-12 left-footer">
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12 col-xs-12 left-top">
-                                <h4 class="title">CHÚNG TÔI Ở ĐÂY </h4>
-                                <div class="info clearfix">
-                                    <p>56 Vân Côi, P.7, Q. Tân Bình, Tp. Hồ Chí Minh <a target="_blank" href="#">Xem bản đồ</a></p>
-                                    <p>Tư Vấn Bán Hàng (8h - 20h hằng ngày)<span>1900 636 099</span></p>
-                                    <p class="col50">Tư Vấn Đổi Trả (8h - 20h hằng ngày)<span>1900 636 099</span></p>
-                                    <p class="col50">Bảo hành (8h - 20h hằng ngày)<span>1900 636 099</span></p>
-                                </div>
-                            </div>
-
-                            <div class="col-sm-6 col-xs-12 left-social">
-                                <h4 class="title">LIÊN KẾT </h4>
-                                <ul class="box-social clearfix">
-                                    <li class="pull-left">
-                                        <a href="#" target="_blank" title="">
-                                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                                        </a>
-                                    </li>
-                                    <li class="pull-left">
-                                        <a href="#" target="_blank" title="">
-                                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                                        </a>
-                                    </li>
-                                    <li class="pull-left">
-                                        <a href="#" target="_blank" title="">
-                                            <i class="fa fa-google-plus" aria-hidden="true"></i>
-                                        </a>
-                                    </li>
-                                    <li class="pull-left">
-                                        <a href="#" target="_blank" title="">
-                                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                                        </a>
-                                    </li>
-                                    <li class="pull-left">
-                                        <a href="#" target="_blank" title="">
-                                            <i class="fa fa-instagram" aria-hidden="true"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <div class="col-sm-6 col-xs-12 left-pay">
-                                <h4 class="title">THANH TOÁN </h4>
-                                <div class="content-pay">
-                                    <img src="../images/img-119.png" alt="" width="" height="">
-                                </div>
-
-                            </div>
-                        </div>
+                    <div class="col-sm-4 col-xs-12 right-links">
+                        <h4 class="title">
+                            Danh mục sản phẩm
+                        </h4>
+                        <ul class="list-links">
+                            @foreach (var item in commonInfo.ProductCategoryList)
+                            {
+                                <li>
+                                    <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">@item.Name</a>
+                                </li>
+                            }
+                        </ul>
                     </div>
-                    <div class="col-md-6 col-sm-12 col-xs-12 right-footer">
-                        <div class="row">
-                            <div class="col-sm-4 col-xs-12 right-links">
-                                <h4 class="title">VỀ S.A.M SHOP</h4>
-                                <ul class="list-links">
-                                    <li><a href="#"><span>Tìm kiếm</span></a></li>
-                                    <li><a href="#"><span>Giới thiệu</span></a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-4 col-xs-12 right-links">
-                                <h4 class="title">CHÍNH SÁCH</h4>
-                                <ul class="list-links">
-                                    <li><a href="#"><span>Sản phẩm khuyến mãi</span></a></li>
-                                    <li><a href="#"><span>Sản phẩm nổi bật</span></a></li>
-                                    <li><a href="#"><span>Tất cả sản phẩm</span></a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-4 col-xs-12 right-links">
-                                <h4 class="title">HỖ TRỢ</h4>
-                                <ul class="list-links">
-                                    <li><a href="#"><span>Tìm kiếm</span></a></li>
-                                    <li><a href="#"><span>Giới thiệu</span></a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-12 col-xs-12 right-newsletter">
-                                <h4 class="title">HÃY ĐỂ LẠI MAIL NHẬN NHIỀU ƯU ĐÃI HƠN</h4>
-                                <div class="form-footer">
-                                    <form accept-charset="UTF-8" action="" class="contact-form" method="post">
-                                        <input name="form_type" type="hidden" value="customer">
-                                        <input name="utf8" type="hidden" value="✓">
-                                        <div class="main-footer-form clearfix">
-                                            <input type="hidden" id="" name="" value="">
-                                            <input class="txt-form" name="" type="email" placeholder="Đăng ký email" required="required">
-                                            <button class="button">Đăng ký</button>
-                                        </div>
-                                    </form>
-                                </div>
-                                <p class="note">* Hãy để lại email để nhận được những khuyến mãi mới nhất</p>
-                            </div>
-                        </div>
+
+                    <div class="col-sm-4 col-xs-12 right-links">
+                        <h4 class="title">Thông tin</h4>
+                        <ul class="list-links">
+                            <li>
+                                <a href="/about">Giới thiệu</a>
+                            </li>
+                            <li>
+                                <a href="/shippolicy">Chính sách vận chuyển</a>
+                            </li>
+                            <li>
+                                <a href="/PaymentInfo">Hướng dẫn thanh toán</a>
+                            </li>
+                        </ul>
                     </div>
+
+                    <div class="col-sm-4 col-xs-12 right-links">
+                        <h4 class="title">Tin tức</h4>
+                        <ul class="list-links">
+                            <li>
+                                <a href="/Blog">Blogs</a>
+                            </li>
+
+                            <li>
+                                <a href="/home/contact">Liên hệ</a>
+                            </li>
+                            @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                            {
+                                <li>
+                                    <a href="@commonInfo.FaceBookLink" target="_blank">Fanpage</a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -104,32 +66,21 @@
         <div class="container">
             <div class="main-bottom-footer clearfix">
                 <div class="logo pull-left">
-                    <a href="/"><img class="insImageload" data-load="true" alt="Beauty style" src="//theme.hstatic.net/1000204910/1000273076/14/dtb.png?v=399"></a>
+                    <a href="#" title="">
+                        <img class="insImageload" data-load="true" src="@commonInfo.Logo" alt="@commonInfo.Name">
+                    </a>
                 </div>
 
                 <div class="copy pull-left">
-                    <p>
-                        Công ty cổ phần Pro Ins - 56 Vân Côi, P. 7, Q. Tân Bình, TP.HCM
-                        <br>
-                        Mã số thuế: 0311465876 do Sở Kế hoạch đầu tư TP HCM cấp ngày 20/011/2015
-                        <br>
-                        ĐT:  1900 636 099 - Fax: 08.38666237 - Email: hi@haravan.com
-                    </p>
-                </div>
-
-                <div class="logo pull-right">
-                    <div class="fi-title1 insScroll">
-                        <a href="#" title="">
-                            <img class="" data-load="true" src="../images/logo_ft.png" alt="">
-                        </a>
-                    </div>
+                    <p>@commonInfo.Name - @commonInfo.Desc</p>
+                    <p>Địa chỉ: @commonInfo.Address</p>
+                    <p>HotLine: @commonInfo.HotLine</p>
                 </div>
 
                 <div class="clearfix"></div>
 
                 <p class="copyright text-center">
-                    © Bản quyền thuộc về
-                    <a href="#" target="_blank">Inspired themes</a> | <a target="_blank" href="#" class="">Powered by Haravan</a>.
+                    Copyrights © @DateTime.Today.Year @commonInfo.Name. <a target="_blank" href="https://anpero.com">Powered by Anpero</a>
                 </p>
             </div>
         </div>
