--- a/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <link rel="shortcut icon" href="@commonInfo.Logo" type="image/x-icon">
 
     @RenderSection("health", required: false)
+    @RenderSection("Styles", required: false)
 </head>
 <body>
 
