--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-12 col-xs-12 header-logo">
                     <div class="visible-xs visible-sm toggle-menu translateY-50">
-                        <a href="javascript:void(0)" class="btnMBToggleNav"><img src="/assets/images/icons/icon-menu.png" alt=""></a>
+                        <a href="javascript:void(0)" class="btnMBToggleNav"><img src="/html/images/icons/icon-menu.png" alt="Menu"></a>
                     </div>
                     <div class="logo">
                         <a href="/"><img src="@commonInfo.Logo" alt="@commonInfo.Name"></a>
