--- a/12_Shop_MultiProduct/Views/Home/Contact.cshtml
+++ b/12_Shop_MultiProduct/Views/Home/Contact.cshtml
@@ -31,7 +31,7 @@
         <div>
             @Html.Raw(commonInfo.Footer)
         </div>
-        <div id="shopify-section-template-contact" class="shopify-section section section_template__contact">
+        <div class="section section_template__contact">
             <div class="row">
                 <div class="col-sm-4" itemscope itemtype="http://schema.org/LocalBusiness">
                     <div class="contact_item item_address">
@@ -62,7 +62,7 @@
                     <div class="contact_item item_form">
                         <h3 class="item_title">Liên hệ với chúng tôi</h3>
                         <div class="form-group">
-                            <input type="text" id="name" value="" placeholder="Tên liên hệ *" name="name">
+                            <input type="text" id="name" value="" placeholder="Tên liên hệ *" name="name" class="form-control input-sm">
                         </div>
                         <div class="form-group">                            
                             <input type="text" class="form-control input-sm" id="email" name="email">
@@ -158,3 +158,38 @@
         }
     </script>
 }
+<style type="text/css">
+    iframe{
+        width:100%;
+    }
+    .item_title {
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    padding: 0 0 16px 0;
+}
+    .template_contact .item_address h3 {
+    margin-bottom: 9px;
+}
+    .template_contact .contact_element {
+    padding: 27px 0 26px 70px;
+    border-bottom: 1px solid rgba(240,240,240,0.5);
+    position: relative;
+}
+    .template_contact .section_template__contact {
+    margin-top: 30px;
+}
+    .template_contact .contact_element svg {
+    fill: #acdbb4;
+    position: absolute;
+    top: 27px;
+    left: 20px;
+}
+    .template_contact .contact_element h4 {
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 6px;
+}
+</style>
