--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -51,7 +51,7 @@
                 <div class="col-md-3 hidden-sm hidden-xs header-user">
 
                     <div class="box-cart pull-right relative">
-                        <a href="#">
+                        <a href="/product/checkout">
                             <div class="box">
                                 <div class="box">
                                     <div class="icon">
