--- a/12_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/12_Shop_MultiProduct/Views/Product/List.cshtml
@@ -27,6 +27,12 @@
             <link rel="canonical" href="@ViewBag.WebsiteUrl" />
         }
 
+        @section Styles{
+            <style>
+            .box-pagination ul li.previous a:before { content: "Trước" }
+            </style>
+        }
+
         <div class="box-breadcrumb">
             <div class="container">
                 <ul class="hidden-sm hidden-xs">
