--- a/12_Shop_MultiProduct/Views/Article/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Article/Index.cshtml
@@ -117,3 +117,26 @@
      data-action="like"
      data-show-faces="true">
 </div>
+<style>
+     .breadcrumbs {
+    padding: 0 0 26px 0;
+}
+    .breadcrumbs ul {
+    font-size: 0;
+    line-height: 0;
+}
+    .breadcrumbs li {
+    display: inline-block;
+    padding: 27px 10px 0 0;
+}
+    .breadcrumbs a, .breadcrumbs span {
+    font-size: 14px;
+    line-height: 1em;
+}
+    .breadcrumbs li ~ li:before {
+    content: '\f105';
+    margin: 0 10px 0 0;
+    font: 14px/1em "FontAwesome";
+}
+
+</style>
