--- a/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Shop_MultiProduct/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -58,7 +58,7 @@
                                         <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                                     </div>
                                     <div class="text">
-                                        <span>Giỏ hàng (<span id="cartCount" class="numberCart">0</span>)</span>
+                                        <span>Giỏ hàng (<span id="cartCount" class="numberCart spN">0</span>)</span>
                                         <span id="cartPrice" class="sub">0₫</span>
                                     </div>
                                 </div>
