--- a/12_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -71,10 +71,13 @@
                                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                             @{
+                                                <div class="carousel-item active">
+                                                    <img class="d-block w-100" src="@item.Images" alt="@item.PrName">
+                                                </div>
                                                 var slide = (string[])item.ImagesSlide;
                                                 for (var i = 0; i < slide.Length; i++)
                                                 {
-                                                    <div class="carousel-item @(i == 0 ? "active" : "")">
+                                                    <div class="carousel-item">
                                                         <img class="d-block w-100" src="@slide[i]" alt="@item.PrName">
                                                     </div>
                                                 }
@@ -82,9 +85,9 @@
                                         </div>
                                         <ol class="carousel-indicators">
                                             @{
-                                                for (var i = 0; i < slide.Length; i++)
+                                                for (var i = 0; i <= slide.Length; i++)
                                                 {
-                                                    <li data-target="#carouselExampleIndicators" data-slide-to="@(i)" class="@(i == 0 ? "active" : "")">
+                                                    <li data-target="#carouselExampleIndicators" class="@(i == 0 ? "active" : "")" data-slide-to="@(i)">
                                                         <a href="javascript:void(0)" title="@item.PrName">@item.PrName</a>
                                                     </li>
                                                 }
